--- a/HTML practice/OL&UL.html
+++ b/HTML practice/OL&UL.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
   <html>
     <head>
       <title>T K's Coffee</title>
@@ -11,15 +11,16 @@
       <article>
         <section id="Heading">
           <h2>Hot coco receipe</h2>
-          <h2>Ingredients</h2>
+          <h3>Ingredients</h3>
           <ul>
             <li>2 T K coffee hot coco mix</li>
             <li>8oz milk</li>
             <li>marshmallows(optional)</li>
           </ul>
         </section>
+        <br>
 <section id = "steps">
-    <h2>Steps</h2>
+    <h3>Steps</h3>
           <ol>
             <li>Scoop Hot Cocoa Mix into a mug.</li>
             <li>
@@ -33,4 +34,4 @@
       </article>
     </body>
   </html>
-</DOCTYPE>
+</!DOCTYPE>
