--- a/HTML practice/Coffee serch engine optimization.html
+++ b/HTML practice/Coffee serch engine optimization.html
@@ -1,4 +1,4 @@
-<DOCTYPE HTML>
+<!DOCTYPE HTML>
   <html>
     <head>
       <title>First html doc</title>
@@ -30,4 +30,4 @@
       <footer>&copy; 2023 Santhosh T K</footer>
     </body>
   </html>
-</DOCTYPE>
+</!DOCTYPE>
